ws_lidar/log/build_2025-03-07_15-02-33/gpsPubSub/stderr.log
  File "/home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub/pos_mon.py", line 70
    [imu_publisher-5] 10.9582
                      ^^^^^^^
SyntaxError: invalid syntax

